 - Fixed bugs with the Crystal Star Pendant ("If you have **ever** been given a Crystal Star Pendant", not if you have it NOW)
 - Book 5, sect20: Fixed bug, stop combat after turn 3
 - Book 5, sect330: Fixed bug, stop combat after turn 2
 - Added privacy policy
 - New option on Action Chart to fight unarmed (can be useful on book 12)
 - Show message when current weapon is changed
 - Book 1, sect88: Spear is capitalized, thus you should be able to take and equip it as a normal weapon
 - Book 2, sect290: According to the text, you need to eat a meal from your backpack in this section
 - Book 5, sect166: You cannot use a Shield when afflicted by Limbdeath
 - Book 5, sect239: Wrong Random Table bonuses
 - Settings: Added option to start a new game

1.11.1
 - Android 4.X is no longer supported. Min. Android version is now 5.0
 - Fixed bug on book 6 / sect284: If you lost all your money, you could not go to sect76
 - Fixed bug picking map on book 6 if you had 12 or more Special Items
 - Better explanation for export / import / save / load games
 - Fixed bug trying to export saved games if there was none
 - Fixed bug on book 10 / Equipment: Missed Potion of Alether
 - Book 5: Do not show +2 CS on stats if you cannot use Shield by Limbdeath. Thanks Julian!
 - Support for Extended Combat Results Table (LW club newsletter 29). Thanks Julian!
 - Explain basics of game mechanics in first played book
 - FAQ: "I cannot write in the Action Chart"

1.12
 - Book 13 and 14 available
 - Fixed Quivers with no arrows available on section should not show "(0 arrows)". Show "(0 arrows)" only on Action chart. Same to sell quiver object (see book 8, sect168)
 - Objects on the Action Chart can have a available uses count (used in book 8, 9 11). 
 - Book 8 Section 138: Avoid duplicates in sell objects list.
 - Add Kai/Magnakai serie loyalty bonus, effective only if played all the 5 kai books (for magnakai) or 12 kai/magnakai books (for grand master)